testdata/golden/hir_borrow/invalid/spawn_escape.hir
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:30 cannot send 'r' to a spawned task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=558) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L1117(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=559) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let task: type#312 = spawn use_ref(r): type#312: type#312
  return task.await(): nothing
}

borrow edges:
  L1119(r) (&) borrows L1118(x) at 0:87-89 scope=S5
events:
  borrow_start L1119(r) -> L1118(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L1119(r) -> L1118(x) at 0:120-121 scope=S5 note="B1"
  borrow_end L1119(r) -> L1118(x) scope=S5 note="scope_end B1"
move plan:
  L1118(x): MoveCopy (copy type)
  L1119(r): MoveForbidden (spawn escape)
  L1120(task): MoveNeedsDrop (non-copy (drop))

